--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,4 @@ exclude =
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
     */settings.py:E501
+    test*.py:I003,E302
