--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,7 +171,7 @@ jobs:
         source: "docker-compose.production.yml"
         target: "taski"
     - name: Executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@0.1.3
+      uses: appleboy/ssh-action@v.0.1.3
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
